// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActivityStartEnd /> #render() still matches snapshot 1`] = `
<ForEachEventVariant
  renderDefault={[Function]}
  renderField={[Function]}
  variant={null}
/>
`;

exports[`<ActivityStartEnd /> #renderEditable() still matches snapshot 1`] = `
<div>
  <WithStyles(GridItem)>
    <WithStyles(GridContainer)
      direction="column"
      spacing={0}
    >
      <WithStyles(GridItem)>
        <EventHeading
          Typography={[Function]}
        >
          <FormattedMessage
            defaultMessage="Starting"
            id="app.Event.layouts.Activity.StartEnd.startSectionLabel"
          />
        </EventHeading>
      </WithStyles(GridItem)>
      <ConnectFunction
        dataId={null}
        hideEndDate={false}
        variant={null}
      />
    </WithStyles(GridContainer)>
  </WithStyles(GridItem)>
  <WithStyles(GridItem)>
    <WithStyles(GridContainer)
      direction="column"
      spacing={0}
    >
      <WithStyles(GridItem)>
        <EventHeading
          Typography={[Function]}
        >
          <FormattedMessage
            defaultMessage="Ending"
            id="app.Event.layouts.Activity.StartEnd.endSectionLabel"
          />
        </EventHeading>
      </WithStyles(GridItem)>
      <ConnectFunction
        dataId={null}
        hideEndDate={false}
        variant={null}
      />
    </WithStyles(GridContainer)>
  </WithStyles(GridItem)>
  <ConnectFunction
    dataId={null}
    hideEndDate={false}
    variant="label"
  />
</div>
`;

exports[`<ActivityStartEnd /> #renderField() still matches snapshot 1`] = `
<div>
  <WithStyles(Section)
    title={
      <FormattedMessage
        defaultMessage="Time"
        id="app.Event.layouts.Activity.StartEnd.sectionLabel"
      />
    }
  >
    <WithStyles(GridContainer)
      spacing={3}
    >
      <WithStyles(GridItem)
        xs={12}
      >
        <WithStyles(GridContainer)
          alignItems="baseline"
        >
          <WithStyles(GridItem)
            sm={2}
          >
            <H4
              dense={true}
              fontStyle="italic"
              weight="bold"
            >
              <FormattedMessage
                defaultMessage="Starting"
                id="app.Event.layouts.Activity.StartEnd.startSectionLabel"
              />
            </H4>
          </WithStyles(GridItem)>
          <WithStyles(GridItem)
            sm={true}
            xs={12}
          >
            <ConnectFunction
              dataId={null}
              hideEndDate={false}
              variant={null}
            />
          </WithStyles(GridItem)>
        </WithStyles(GridContainer)>
      </WithStyles(GridItem)>
      <WithStyles(GridItem)
        xs={12}
      >
        <WithStyles(GridContainer)
          alignItems="baseline"
        >
          <WithStyles(GridItem)
            sm={2}
          />
          <WithStyles(GridItem)
            sm={true}
            xs={12}
          >
            <WithStyles(Connect(WithSimplifyResaga(BatchCreate)))
              dataId={null}
              hideEndDate={false}
              variant={null}
            />
          </WithStyles(GridItem)>
        </WithStyles(GridContainer)>
      </WithStyles(GridItem)>
      <WithStyles(GridItem)
        xs={12}
      >
        <WithStyles(GridContainer)
          alignItems="baseline"
        >
          <WithStyles(GridItem)
            sm={2}
          >
            <H4
              dense={true}
              fontStyle="italic"
              weight="bold"
            >
              <FormattedMessage
                defaultMessage="Ending"
                id="app.Event.layouts.Activity.StartEnd.endSectionLabel"
              />
            </H4>
          </WithStyles(GridItem)>
          <WithStyles(GridItem)
            sm={true}
            xs={12}
          >
            <ConnectFunction
              dataId={null}
              hideEndDate={false}
              variant={null}
            />
          </WithStyles(GridItem)>
        </WithStyles(GridContainer)>
      </WithStyles(GridItem)>
    </WithStyles(GridContainer)>
  </WithStyles(Section)>
</div>
`;

exports[`<ActivityStartEnd /> renderField should match snapshot 1`] = `
<div>
  <WithStyles(Section)
    title={
      <FormattedMessage
        defaultMessage="Time"
        id="app.Event.layouts.Activity.StartEnd.sectionLabel"
      />
    }
  >
    <WithStyles(GridContainer)
      spacing={3}
    >
      <WithStyles(GridItem)
        xs={12}
      >
        <WithStyles(GridContainer)
          alignItems="baseline"
        >
          <WithStyles(GridItem)
            sm={2}
          >
            <H4
              dense={true}
              fontStyle="italic"
              weight="bold"
            >
              <FormattedMessage
                defaultMessage="Starting"
                id="app.Event.layouts.Activity.StartEnd.startSectionLabel"
              />
            </H4>
          </WithStyles(GridItem)>
          <WithStyles(GridItem)
            sm={true}
            xs={12}
          >
            <ConnectFunction
              dataId={null}
              hideEndDate={false}
              variant={null}
            />
          </WithStyles(GridItem)>
        </WithStyles(GridContainer)>
      </WithStyles(GridItem)>
      <WithStyles(GridItem)
        xs={12}
      >
        <WithStyles(GridContainer)
          alignItems="baseline"
        >
          <WithStyles(GridItem)
            sm={2}
          />
          <WithStyles(GridItem)
            sm={true}
            xs={12}
          >
            <WithStyles(Connect(WithSimplifyResaga(BatchCreate)))
              dataId={null}
              hideEndDate={false}
              variant={null}
            />
          </WithStyles(GridItem)>
        </WithStyles(GridContainer)>
      </WithStyles(GridItem)>
      <WithStyles(GridItem)
        xs={12}
      >
        <WithStyles(GridContainer)
          alignItems="baseline"
        >
          <WithStyles(GridItem)
            sm={2}
          >
            <H4
              dense={true}
              fontStyle="italic"
              weight="bold"
            >
              <FormattedMessage
                defaultMessage="Ending"
                id="app.Event.layouts.Activity.StartEnd.endSectionLabel"
              />
            </H4>
          </WithStyles(GridItem)>
          <WithStyles(GridItem)
            sm={true}
            xs={12}
          >
            <ConnectFunction
              dataId={null}
              hideEndDate={false}
              variant={null}
            />
          </WithStyles(GridItem)>
        </WithStyles(GridContainer)>
      </WithStyles(GridItem)>
    </WithStyles(GridContainer)>
  </WithStyles(Section)>
</div>
`;

exports[`<ActivityStartEnd /> renderFieldBatchCreate should match snapshot if isCreating is true 1`] = `
<div>
  <WithStyles(GridItem)
    xs={12}
  >
    <WithStyles(GridContainer)
      alignItems="baseline"
    >
      <WithStyles(GridItem)
        sm={2}
      />
      <WithStyles(GridItem)
        sm={true}
        xs={12}
      >
        <WithStyles(Connect(WithSimplifyResaga(BatchCreate)))
          dataId={null}
          hideEndDate={false}
          variant={null}
        />
      </WithStyles(GridItem)>
    </WithStyles(GridContainer)>
  </WithStyles(GridItem)>
</div>
`;
